k8s/backend_dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: benchmarking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
      - name: backend
        image: ghcr.io/gfragi/haic-backend:rollback
        ports:
        - containerPort: 8000
