k8s/frontend-react_dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-react
  namespace: haic-benchmark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-react
  template:
    metadata:
      labels:
        app: frontend-react
    spec:
      containers:
      - name: frontend-react
        image: ghcr.io/gfragi/haic-frontend-react:latest
        ports:
        - containerPort: 80
