k8s/frontend_dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: benchmarking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: your-dockerhub-user/your-frontend-image:latest
        ports:
        - containerPort: 80
