k8s/postgres_dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: benchmark-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      securityContext:
        fsGroup: 999           # uid/gid used by postgres image
      containers:
        - name: postgres
          image: postgres:15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            # - name: pg-init-sql
            #   mountPath: /docker-entrypoint-initdb.d
            #   readOnly: true
          readinessProbe:
            tcpSocket: { port: 5432 }
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket: { port: 5432 }
            initialDelaySeconds: 15
            periodSeconds: 10
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
        - name: pg-init-sql
          configMap:
            name: pg-init-sql
            defaultMode: 0444    # readable by entrypoint
