k8s/11-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: benchmarking
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: postgres
  type: ClusterIP
