k8s/30-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: benchmarking
  labels:
    app: backend
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: backend
  type: ClusterIP
