k8s/40-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: benchmarking
  labels:
    app: frontend
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: frontend
  type: ClusterIP
