k8s/backend_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: benchmark-v2
spec:
  selector:
    app: backend
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
