k8s/bench_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: benchmark-service
  labels:
    app: benchmark-service
spec:
  selector:
    app: benchmark-service
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  type: ClusterIP  # or LoadBalancer if you want an external IP (like in cloud providers)
