k8s/frontend-react_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: haic-benchmark
spec:
  selector:
    app: frontend-react
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
