k8s/frontend_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: benchmarking
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
