k8s/postgres_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: benchmark-v2
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
