k8s/frontend_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: benchmarking
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: benchmarking-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: benchmark-hua.humaine-horizon.eu
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend        #  FastAPI Service
            port:
              number: 8000      # its Service port
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  tls:
  - hosts: [benchmark-hua.humaine-horizon.eu]
    secretName: hua-benchmarking-tls
